[package]
name = "tweet-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
env_logger = "0.11.5"
futures = "0.3.31"
log = "0.4.22"
rdkafka = "0.36.2"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["macros", "rt", "rt-multi-thread", "sync"] }
